--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.5.0",
+    "@material-ui/icons": "^4.4.3",
+    "moment": "^2.24.0",
+    "pondjs": "^0.8.10",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0"
+    "react-scripts": "3.2.0",
+    "react-timeseries-charts": "^0.16.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -29,5 +34,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy" : "http://localhost:3001"
+  "proxy": "http://localhost:3001"
 }
